.travis.yml: Take from StreamDevice as is
Take the .travis.yml from dirk-zimoch/StreamDevice "as is".

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,22 @@
-sudo: false
-dist: bionic
-language: c
-compiler:
-  - gcc
+# .travis.xml for use with EPICS Base ci-scripts
+# (see: https://github.com/epics-base/ci-scripts)
+
+language: cpp
+compiler: gcc
+dist: trusty
+
 cache:
   directories:
-    - $HOME/.cache
+  - $HOME/.cache
+
+env:
+  global:
+    - SETUP_PATH=.ci-local:.ci
+    - MODULES="asyn calc"
+    - ASYN_HOOK=.ci-local/fix_RELEASE.sh
+    - CALC_HOOK=.ci-local/fix_RELEASE.sh
+    - TEST=YES
+
 addons:
   apt:
     packages:
@@ -14,9 +25,81 @@ addons:
     - perl
     - clang
     - g++-mingw-w64-i686
+    - g++-mingw-w64-x86-64
+    - qemu-system-x86
+    - libpcre3-dev
+  homebrew:
+    packages:
     - re2c
-env:
- - BASE=7.0     STATIC=shared                     ASYN=R4-35 MOTOR=v7.0.1-ESS
- - BASE=7.0     STATIC=static                     ASYN=R4-35 MOTOR=v7.0.1-ESS
-install: ./.ci-ethercatmc/travis-prepare.sh
-script: make
+    - bash
+    update: true
+
+install:
+  - .ci/travis/prepare.sh
+  - .ci-local/fix_RELEASE.sh
+
+script:
+  - .ci/travis/build.sh
+
+matrix:
+  include:
+  - env: BASE=3.14
+  - env: BASE=3.15
+  - env: BASE=7.0
+  - env: BASE=7.0
+    compiler: clang
+
+# Windows
+    
+  - env: BASE=3.14 WINE=32 STATIC=YES
+    compiler: mingw
+
+  - env: BASE=3.14 WINE=64 STATIC=YES
+    compiler: mingw
+
+#  Dynamic linking is not supported for mingw in 3.14
+#  - env: BASE=R3.14.12.8 WINE=32 STATIC=NO
+#    compiler: mingw
+#
+#  - env: BASE=R3.14.12.8 WINE=64 STATIC=NO
+#    compiler: mingw
+
+  - env: BASE=3.15 WINE=32 STATIC=YES
+    compiler: mingw
+
+  - env: BASE=3.15 WINE=64 STATIC=YES
+    compiler: mingw
+
+  - env: BASE=3.15 WINE=32 STATIC=NO
+    compiler: mingw
+
+  - env: BASE=3.15 WINE=64 STATIC=NO
+    compiler: mingw
+
+  - env: BASE=7.0 WINE=32 STATIC=YES
+    compiler: mingw
+
+  - env: BASE=7.0 WINE=64 STATIC=YES
+    compiler: mingw
+
+  - env: BASE=7.0 WINE=32 STATIC=NO
+    compiler: mingw
+
+  - env: BASE=7.0 WINE=64 STATIC=NO
+    compiler: mingw
+
+#  - env: BASE=7.0 STATIC=YES
+#    os: windows
+#
+#  - env: BASE=7.0 STATIC=NO
+#    os: windows
+
+# RTEMS
+
+  - env: BASE=7.0 RTEMS=4.10
+  - env: BASE=7.0 RTEMS=4.9
+
+# MacOS
+  - env: BASE=7.0
+    os: osx
+    compiler: clang
